Coquilles dt heures portfolio

--- a/latex/modeles/affichages.tex
+++ b/latex/modeles/affichages.tex
@@ -20,7 +20,7 @@
         % \addcontentsline{toc}{subsubsection}{{\saenom}}
         \phantomsection\label{lab\currentSAE}
         \tableauSAE{\currentSAE}
-
+				\newpage
         \forLoop{1}{\value{cptSexemple\currentSAE}}{noexemple}{
             \tableauExempleSAE{\currentSAE}{\Alph{noexemple}}
         \newpage
