--- a/latex/ressources/R112.tex
+++ b/latex/ressources/R112.tex
@@ -64,18 +64,18 @@ première année de B.U.T. permet à l'étudiant :
 Les activités pouvant être proposées dans cette ressource sont :
 \begin{itemize}
 \item
-  rencontres d'entrepreneurs, de chefs de service, de techniciens et
-  d'enseignants;
+  Rencontres d'entrepreneurs, de chefs de service, de techniciens et
+  d'enseignants ;
 \item
-  visites d'entreprises, forums;
+  Visites d'entreprises, forums;
 \item
-  témoignages, relations avec d'anciens diplômés;
+  Témoignages, relations avec d'anciens diplômés;
 \item
-  découverte et compréhension d'un bassin d'emploi particulier;
+  Découverte et compréhension d'un bassin d'emploi particulier;
 \item
-  intérêt et prise en main d'un portfolio;
+  Intérêt et prise en main d'un portfolio;
 \item
-  déterminer ses atouts personnels.
+  Déterminer ses atouts personnels.
 \end{itemize}
 }
 
