--- a/latex/ressources/R113.tex
+++ b/latex/ressources/R113.tex
@@ -92,8 +92,7 @@ et les mêmes avec sinus;
   \item
     période, fréquence, pulsation;
   \item
-    signaux périodiques de base : créneau, dent de scie, sinus,
-    cosinus\ldots{}
+    signaux périodiques de base : créneau, dent de scie, sinus, cosinus;
   \item
     fréquence/période/pulsation d'un signal dilaté, d'une combinaison
     linéaire de signaux périodiques;
