--- a/latex/ressources/R114.tex
+++ b/latex/ressources/R114.tex
@@ -77,7 +77,7 @@ lien avec l'électronique et les télécommunications.}
   \item
     forme algébrique;
   \item
-    addition, multiplication et division avec la forme algébrique;
+    addition, multiplication et division avec la forme algébrique
   \item
     forme exponentielle (retour sur les propriétés de l'expo);
   \item
