--- a/latex/ressources/R207.tex
+++ b/latex/ressources/R207.tex
@@ -30,7 +30,7 @@
 \ajoutRac{AC0315}{Choisir les mécanismes de gestion de données adaptés au développement de l'outil}
 \ajoutRac{AC0316}{S'intégrer dans un environnement propice au développement et au travail collaboratif}
 % Les SAE
-\ajoutRsae{SAÉ23}{Mettre en place une solution informatique pour l’entreprise}
+\ajoutRsae{SAÉ23}{Mettre en place une solution informatique pour l'entreprise}
 \ajoutRsae{SAÉ24}{Projet intégratif}
 
 % Les pre-requis
@@ -43,7 +43,7 @@ l'annuaire des utilisateurs du réseau ou l'état des équipements
 informatiques. Elles peuvent servir à gérer les services réseau d'une
 entreprise (RT1) ou à alimenter les pages d'un site Web (RT3). Il est
 donc amené à stocker, organiser, gérer, protéger des données provenant
-de différentes sources (thématiques du PIX,
+de différentes sources (thématiques du référentiel PIX,
 \url{https://pix.fr/competences}), mais aussi à les traiter en
 développant différents outils informatiques pour ses besoins personnels
 ou pour son équipe (RT3). Plus largement, il contribue activement à
@@ -83,7 +83,7 @@ spécifiques qui seront introduits.}
     Interrogation de données, ajout et modification de données.
   \end{itemize}
 \item
-  Lecture d'une documentation technique (\textabbrv{UML}, diagramme de classes)
+  Lecture d'une documentation technique (\textabbrv{UML}, diagramme de classes).
 \end{itemize}
 L'utilisation de l'anglais est préconisée dans la documentation du code.
 }
