--- a/latex/ressources/R209.tex
+++ b/latex/ressources/R209.tex
@@ -31,7 +31,7 @@
 \ajoutRac{AC0315}{Choisir les mécanismes de gestion de données adaptés au développement de l'outil}
 \ajoutRac{AC0316}{S'intégrer dans un environnement propice au développement et au travail collaboratif}
 % Les SAE
-\ajoutRsae{SAÉ23}{Mettre en place une solution informatique pour l’entreprise}
+\ajoutRsae{SAÉ23}{Mettre en place une solution informatique pour l'entreprise}
 \ajoutRsae{SAÉ24}{Projet intégratif}
 
 % Les pre-requis
