--- a/latex/ressources/R211.tex
+++ b/latex/ressources/R211.tex
@@ -27,7 +27,7 @@
 % Les SAE
 \ajoutRsae{SAÉ21}{Construire un réseau informatique pour une petite structure}
 \ajoutRsae{SAÉ22}{Mesurer et caractériser un signal ou un système}
-\ajoutRsae{SAÉ23}{Mettre en place une solution informatique pour l’entreprise}
+\ajoutRsae{SAÉ23}{Mettre en place une solution informatique pour l'entreprise}
 \ajoutRsae{SAÉ24}{Projet intégratif}
 
 % Les pre-requis
