--- a/latex/ressources/R212.tex
+++ b/latex/ressources/R212.tex
@@ -70,17 +70,17 @@
 Les activités notamment proposées dans cette ressource sont :
 \begin{itemize}
 \item
-  enquête métiers et veille professionnelle;
+  Enquête métiers et veille professionnelle;
 \item
-  rencontres et entretiens avec des professionnels et anciens étudiants;
+  Rencontres et entretiens avec des professionnels et anciens étudiants;
 \item
-  visite d'entreprise ou d'organisation;
+  Visite d'entreprise ou d'organisation;
 \item
-  participation à des conférences métiers;
+  Participation à des conférences métiers;
 \item
-  construction d'une identité professionnelle numérique;
+  Construction d'une identité professionnelle numérique;
 \item
-  découverte et compréhension d'un bassin d'emploi particulier.
+  Découverte et compréhension d'un bassin d'emploi particulier.
 \end{itemize}
 }
 
