--- a/latex/ressources/R213.tex
+++ b/latex/ressources/R213.tex
@@ -27,7 +27,7 @@
 \ajoutRac{AC0313}{Traduire un algorithme, dans un langage et pour un environnement donné}
 % Les SAE
 \ajoutRsae{SAÉ22}{Mesurer et caractériser un signal ou un système}
-\ajoutRsae{SAÉ23}{Mettre en place une solution informatique pour l’entreprise}
+\ajoutRsae{SAÉ23}{Mettre en place une solution informatique pour l'entreprise}
 \ajoutRsae{SAÉ24}{Projet intégratif}
 
 % Les pre-requis
@@ -52,7 +52,7 @@ l'exploitation d'algorithmes mis en œuvre via un outil informatique.}
   \item
     suites récurrentes;
   \item
-    signal discret (exemples : Kronecker, échelon échantillonné\ldots);
+    signal discret (exemples : Kronecker, échelon échantillonné);
   \item
     convergence d'une suite (opérations sur les limites).
   \end{itemize}
