--- a/latex/ressources/R214.tex
+++ b/latex/ressources/R214.tex
@@ -48,7 +48,7 @@ lien avec l'électronique et les télécommunications.}
 \vspace{-5pt}
 \begin{itemize}
 \item
-  Dérivée
+  Dérivée :
   \begin{itemize}
   \item
     définition;
@@ -66,7 +66,7 @@ lien avec l'électronique et les télécommunications.}
     application à la recherche d'optimum local.
   \end{itemize}
 \item
-  Comportement local et asymptotique
+  Comportement local et asymptotique :
   \begin{itemize}
   \item
     limites (opérations, formes indéterminées);
@@ -74,7 +74,7 @@ lien avec l'électronique et les télécommunications.}
     fonctions négligeables, équivalents.
   \end{itemize}
 \item
-  Intégration
+  Intégration :
   \begin{itemize}
   \item
     définition d'une intégrale comme une surface;
@@ -83,7 +83,7 @@ lien avec l'électronique et les télécommunications.}
   \item
     calcul d'une intégrale à l'aide d'une primitive;
   \item
-    intégration par parties et changement de variable;
+    intégration par parties et changement de variable.
   \end{itemize}
 \end{itemize}
 }
