--- a/latex/saes/SAE11.tex
+++ b/latex/saes/SAE11.tex
@@ -29,17 +29,17 @@
 
 
 % Le description
-\ajoutSdescription{Il s'agit, pour les étudiants, de faire prendre conscience daux
-étudiants desles risques potentiels pris par l'usager d'un environnement
-numérique et de leur fournir les réflexes afin de devenir un usager
-conscient, averti et responsable. L'hygiène informatique et les bonnes
-pratiques de l'usage du numérique sont des connaissances que doivent
-maîtriser et appliquer les étudiants avant d'aller en stage/alternance
-en entreprise, où ils devront respecter la charte informatique imposée
-par la \textabbrv{DSI}. A plus long terme, en tant que professionnels des services
-informatiques de l'entreprise, ils auront à leur tour à charge de
-sensibiliser les utilisateurs et de leur faire connaître et accepter la
-charte de bon usage des moyens informatiques.}
+\ajoutSdescription{Il s'agit, pour les étudiants, de prendre conscience des risques
+potentiels pris par l'usager d'un environnement numérique et de leur
+fournir les réflexes afin de devenir un usager conscient, averti et
+responsable. L'hygiène informatique et les bonnes pratiques de l'usage
+du numérique sont des connaissances que doivent maîtriser et appliquer
+les étudiants avant d'aller en stage/alternance en entreprise, où ils
+devront respecter la charte informatique imposée par la \textabbrv{DSI}. A plus long
+terme, en tant que professionnels des services informatiques de
+l'entreprise, ils auront à leur tour à charge de sensibiliser les
+utilisateurs et de leur faire connaître et accepter la charte de bon
+usage des moyens informatiques.}
 
 % Les ressources
 \ajoutSressources{R101}{Initiation aux réseaux informatiques}
@@ -47,7 +47,7 @@ charte de bon usage des moyens informatiques.}
 % Livrable
 \ajoutSlivrables{
 Rapport d'analyse des risques numériques et présentation diaporama ou
-conception d'une courte vidéo de sensibilisation (\og en 180
+conception d'une courte vidéo de sensibilisation (par ex: \og en 180
 secondes\fg{}) destinée à vulgariser les premiers pas en cybersécurité.\\
 L'étudiant s'approprie son portfolio. Des temps sont prévus pour qu'il y
 synthétise sa production technique et son analyse argumentée.
