--- a/latex/saes/SAE11_exemple1.tex
+++ b/latex/saes/SAE11_exemple1.tex
@@ -9,7 +9,7 @@ peuvent encourir sans considérer avec attention l'usage de leur
 environnement numérique.}
 
 \ajoutESdescription{
-On pourra faire un focus particulier sur les points suivants:
+On pourra faire un focus particulier sur les points suivants.
 \begin{itemize}
 \item
   Protéger ses accès avec des mots de passe solides; en TP on peut
@@ -40,8 +40,8 @@ On pourra faire un focus particulier sur les points suivants:
   sur l'usage d'un faux point d'accès WiFi et de collecter des
   identifiants de réseaux sociaux, \ldots.
 \item
-  Analyser les trames non chiffrées des protocoles (telnet, ftp, smtp,
-  pop, imap, rtp, \ldots) avec Wireshark,
+  Analyser les trames non chiffrées des protocoles (\textabbrv{TELNET}, \textabbrv{FTP}, \textabbrv{SMTP},
+  \textabbrv{POP}, \textabbrv{IMAP}, \textabbrv{RTP}, \ldots) avec Wireshark,
   en extraire des champs significatifs avec Analyse/Follow/\textabbrv{TCP} Stream
   (ou \textabbrv{HTTP} Stream); on peut utiliser
   un site Web (création personnelle ou sur Internet) contenant un
@@ -54,22 +54,13 @@ On pourra faire un focus particulier sur les points suivants:
 On pourra également utiliser les supports:
 \begin{itemize}
 \item
-  Cybermalveillance :
-  \url{https://www.cybermalveillance.gouv.fr/bonnes-pratiques}
+  Cybermalveillance:\url{https://www.cybermalveillance.gouv.fr/bonnes-pratiques}
 \item
-  \textabbrv{MOOC} \textabbrv{ANSSI} : \url{https://secnumacademie.gouv.fr/}
+  \textabbrv{MOOC} \textabbrv{ANSSI}:\url{https://secnumacademie.gouv.fr/}
 \end{itemize}
 }
 
-\ajoutESformes{\vspace{-5pt}
-\begin{itemize}
-\item
-  TP, projet.
-\item
-  Appropriation du portfolio par l'étudiant, avec temps prévus pour
-  qu'il y synthétise sa production
-  technique et son analyse argumentée.
-\end{itemize}}
+\ajoutESformes{TP, projet.}
 
 
 
