--- a/latex/saes/SAE12_exemple1.tex
+++ b/latex/saes/SAE12_exemple1.tex
@@ -14,7 +14,7 @@ caractéristiques de consommation d'énergie des équipements du réseau.}
 \ajoutESdescription{
 Il s'agit de comprendre l'agencement des briques réseaux (accès au
 réseau Internet, Box en général), des équipements (routeur, switch,
-firewall, wifi), des terminaux (\textabbrv{PC}, smartphone, imprimantes, consoles de
+firewall, WiFi), des terminaux (\textabbrv{PC}, smartphone, imprimantes, consoles de
 jeux, media-center, \textabbrv{NAS}, \ldots) et des protocoles (\textabbrv{IP}, \textabbrv{DHCP}, \textabbrv{DNS}, Mail,
 Web, \ldots) qui permettent leur fonctionnement.\\
 On peut s'appuyer sur le réseau domestique de chaque étudiant avec une
@@ -27,10 +27,7 @@ poste client.On peut s'appuyer sur les commandes de base: ipconfig,
 ifconfig, ip, ping, arp, traceroute, arp-scan (ArpCacheWatch sous
 Windows) pour lister les adresses \textabbrv{MAC} présentes dans le réseau local.\\
 On peut faire découvrir les outils pour connaître son adresse \textabbrv{IP}
-Publique: \url{https://www.degrouptest.com/test-debit.php.}\\
-On peut faire découvrir l'application Android WiFi Analyser pour lister
-les points d'accès à proximité ou les fréquences utilisées :
-\url{https://github.com/VREMSoftwareDevelopment/WiFiAnalyzer.}\\
+Publique: \url{https://github.com/VREMSoftwareDevelopment/WiFiAnalyzer.}\\
 Enfin, on pourra initier les étudiants les plus avancés à l'usage de la
 distribution Linux Kali en \textabbrv{VM} avec l'outil nmap pour découvrir (en
 interne) les ports ouverts sur les équipements du réseau local
