--- a/latex/saes/SAE13_exemple1.tex
+++ b/latex/saes/SAE13_exemple1.tex
@@ -41,10 +41,10 @@ Le support pourra être :
   et de câbles;
 \item
   la fibre optique, avec pour outils envisagés : la soudure, le crayon
-  optique, la sonde d'inspection,la photométrie,
+  optique, la sonde d'inspection,la photométrie;
 \item
   une liaison radio, les mesures traitant de l'atténuation ou des effets
-  d'interférences
+  d'interférence.
 \end{itemize}
 L'étudiant devra :
 \begin{itemize}
