--- a/latex/saes/SAE14.tex
+++ b/latex/saes/SAE14.tex
@@ -65,4 +65,4 @@ synthétise sa production technique et son analyse argumentée.
 }
 
 % Mots-clés
-\ajoutSmotscles{Identité numérique, site Web.}
+\ajoutSmotscles{Identité numérique, Site Web.}
