--- a/latex/saes/SAE14_exemple1.tex
+++ b/latex/saes/SAE14_exemple1.tex
@@ -21,15 +21,15 @@ Le contenu du site pourra par exemple :
 \item
   être un curriculum vitae numérique;
 \item
-  recenser les compétences techniques et les projets techniques réalisés
-  ;
+  recenser les compétences techniques et les projets techniques
+  réalisés;
 \item
   contenir des liens vers des réseaux socionumériques vers les outils,
   voire vers les outils numériques
   qu'il est amené à utiliser pendant sa formation (emploi du temps, ENT,
-  \ldots) ;
+  \ldots);
 \item
-  présenter un centre d'intérêt ;
+  présenter un centre d'intérêt;
 \item
   présenter son projet professionnel.
 \end{itemize}
@@ -49,9 +49,9 @@ Le travail pourra être intégré au portfolio de l'étudiant.
 \ajoutESmodalite{\vspace{-5pt}
 \begin{itemize}
 \item
-  Mise en ligne de leur présentation numérique
+  Mise en ligne de leur présentation numérique;
 \item
   Démonstration commentée du travail avec démonstration de leur aptitude
   à modifier/rajouter simplement
-  des informations
+  des informations.
 \end{itemize}}
