--- a/latex/saes/SAE15_exemple1.tex
+++ b/latex/saes/SAE15_exemple1.tex
@@ -41,8 +41,8 @@ complexe dans le code informatique ni une base de données), avec
 différentes étapes :
 \begin{itemize}
 \item
-  Préparer l'environnement de travail pour accès à distance aux
-  ressources :
+  Préparer l'environnement de travail pour accès distance aux ressources
+  :
   \begin{itemize}
   \item
     mise en place de l'arborescence;
@@ -61,7 +61,7 @@ différentes étapes :
   par exemple provenir :
   \begin{itemize}
   \item
-    de sites web ;
+    de sites Web;
   \item
     d'\textabbrv{API}, par exemple l'\textabbrv{API} Google pour cartographie permettant de
     traiter des données de géolocalisation,
@@ -81,8 +81,8 @@ différentes étapes :
   \item
     extraire des statistiques (moyennes, histogrammes);
   \item
-    produire des représentations ``graphiques'' (nuage de mots, tableaux
-    comparatifs);
+    produire des représentations graphiques (nuage de mots, tableaux
+    comparatifs).
   \end{itemize}
 \item
   Générer un document pour présenter les données collectées et le
@@ -106,7 +106,7 @@ différentes étapes :
 \end{itemize}
 }
 
-\ajoutESformes{Travaux pratiques, projet.}
+\ajoutESformes{TP, projet.}
 
 
 
