--- a/latex/saes/SAE16.tex
+++ b/latex/saes/SAE16.tex
@@ -4,7 +4,7 @@
 
 \nouvellesae{SAÉ16}{Portfolio}
 
-\ajoutSheures{3}{3}{???}
+\ajoutSheures{3}{3}{0}
 
 
 %% Les compétences et les ACs
@@ -12,19 +12,33 @@
 
 \ajoutScoeff{0}
 
-
+\ajoutSac{AC0111}{Maîtriser les lois fondamentales de l'électricité afin d'intervenir sur des équipements de réseaux et télécommunications}
+\ajoutSac{AC0112}{Comprendre l'architecture des systèmes numériques et les principes du codage de l'information}
+\ajoutSac{AC0113}{Configurer les fonctions de base du réseau local}
+\ajoutSac{AC0114}{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis}
+\ajoutSac{AC0115}{Identifier les dysfonctionnements du réseau local}
+\ajoutSac{AC0116}{Installer un poste client}
 
 \ajoutScompetence{RT2-Connecter}{\niveauA}
 
 \ajoutScoeff{0}
 
-
+\ajoutSac{AC0211}{Mesurer et analyser les signaux}
+\ajoutSac{AC0212}{Caractériser des systèmes de transmissions élémentaires et découvrir la modélisation mathématique de leur fonctionnement}
+\ajoutSac{AC0213}{Déployer des supports de transmission}
+\ajoutSac{AC0214}{Connecter les systèmes de \textabbrv{ToIP}}
+\ajoutSac{AC0215}{Communiquer avec un client ou un collaborateur}
 
 \ajoutScompetence{RT3-Programmer}{\niveauA}
 
 \ajoutScoeff{0}
 
-
+\ajoutSac{AC0311}{Utiliser un système informatique et ses outils}
+\ajoutSac{AC0312}{Lire, exécuter, corriger et modifier un programme}
+\ajoutSac{AC0313}{Traduire un algorithme, dans un langage et pour un environnement donné}
+\ajoutSac{AC0314}{Connaître l'architecture et les technologies d'un site Web}
+\ajoutSac{AC0315}{Choisir les mécanismes de gestion de données adaptés au développement de l'outil}
+\ajoutSac{AC0316}{S'intégrer dans un environnement propice au développement et au travail collaboratif}
 
 % Le description
 \ajoutSdescription{Au sein d'un dossier et quels qu'en soient la forme, l'outil ou le
@@ -82,9 +96,9 @@ méthodologie d'écriture du portfolio.}
 
 % Livrable
 \ajoutSlivrables{
-Portfolio : ensembles de traces et de preuves de l'acquisition des
+Portfolio : ensemble de traces et de preuves de l'acquisition des
 compétences.
 }
 
 % Mots-clés
-\ajoutSmotscles{Portfolio Compétences.}
+\ajoutSmotscles{Portfolio, Compétences.}
