--- a/latex/saes/SAE22.tex
+++ b/latex/saes/SAE22.tex
@@ -50,9 +50,11 @@ présenter sous forme d'un bilan à un client ou un collaborateur.}
 \item
   Rapport écrit;
 \item
-  présentation orale des performances mesurées.
+  Présentation orale des performances mesurées.
 \end{itemize}
+L'étudiant s'approprie son portfolio. Des temps sont prévus pour qu'il y
+synthétise sa production technique et son analyse argumentée.
 }
 
 % Mots-clés
-\ajoutSmotscles{Spectre, puissance, décibels, sensibilité, atténuation, gain.}
+\ajoutSmotscles{Spectre, Puissance, Décibels, Sensibilité, Atténuation, Gain.}
