--- a/latex/saes/SAE22_exemple1.tex
+++ b/latex/saes/SAE22_exemple1.tex
@@ -4,15 +4,14 @@
 
 \nouvelexemple{Analyse de lignes \textabbrv{ADSL}}
 
-\ajoutESproblematique{}
-
-\ajoutESdescription{
-Les lignes \textabbrv{ADSL} peuvent être perturbées par des signaux parasites créés
+\ajoutESproblematique{Les lignes \textabbrv{ADSL} peuvent être perturbées par des signaux parasites créés
 par exemple par une alimentation défectueuse ou un moteur d'ascenseur
 avec des problèmes de \textabbrv{CEM}. Ces perturbateurs peuvent entraîner une
-déconnexion totale d'une ligne \textabbrv{ADSL} voir de toutes les lignes d'un
+déconnexion totale d'une ligne \textabbrv{ADSL} voire de toutes les lignes d'un
 immeuble. L'analyse spectrale et la recherche de ces perturbateurs est
-donc une fonction du maintien en condition opérationnelle de ces lignes.\\
+donc une fonction du maintien en condition opérationnelle de ces lignes.}
+
+\ajoutESdescription{
 La SAE porte sur l'analyse d'un signal \textabbrv{ADSL} dans le domaine spectral et
 pourra comporter jusqu'à 5 parties :
 \begin{itemize}
@@ -21,10 +20,7 @@ pourra comporter jusqu'à 5 parties :
   le signal sous forme d'un fichier
   Excel (une colonne pour le temps et une pour l'amplitude, soit 2
   vecteurs) et l'étudiant devra afficher
-  la \textabbrv{FFT}. Une ressource sur une librairie pour calculer la \textabbrv{FFT} d'un
-  signal (par exemple numpy en Python)
-  et sur l'affichage d'une courbe (par exemple matplotlib en Python) est
-  donc nécessaire.
+  la \textabbrv{FFT}.
 \item
   Détermination de la largeur de la bande montante et descendante
   (changement de valeur de la \textabbrv{DSP}).
@@ -41,13 +37,14 @@ pourra comporter jusqu'à 5 parties :
   fréquence de ce perturbateur dans le
   spectre.
 \end{itemize}
-Elle pourra s'appuyer sur une librairie pour la \textabbrv{FFT} (par exemple numpy
-en Python) et une autre pour l'affichage d'une courbe (par exemple
-matplotlib en Python)
+Elle pourra s'appuyer sur une librairie pour calculer la \textabbrv{FFT} (par
+exemple numpy en Python) et une autre pour l'affichage d'une courbe (par
+exemple matplotlib en Python)
 }
 
-\ajoutESformes{Travaux pratiques et projet semi-autonome.}
+\ajoutESformes{TP et projet semi-autonome.}
 
 
 
-\ajoutESmodalite{}
+\ajoutESmodalite{Présentation des résultats dans un notebook Python, avec explications
+claires prouvant la compréhension.}
