--- a/latex/saes/SAE23.tex
+++ b/latex/saes/SAE23.tex
@@ -2,7 +2,7 @@
 % SAE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\nouvellesae{SAÉ23}{Mettre en place une solution informatique pour l’entreprise}
+\nouvellesae{SAÉ23}{Mettre en place une solution informatique pour l'entreprise}
 
 \ajoutSheures{17}{14}{12}
 
@@ -77,7 +77,9 @@ informatique pour le compte de son entreprise.}
 \item
   Méthode de validation
 \end{itemize}
+L'étudiant s'approprie son portfolio. Des temps sont prévus pour qu'il y
+synthétise sa production technique et son analyse argumentée.
 }
 
 % Mots-clés
-\ajoutSmotscles{Algorithmique, programmation, développement web, documentation technique.}
+\ajoutSmotscles{Algorithmique, Programmation, Développement Web, Documentation technique.}
