--- a/latex/saes/SAE23_exemple1.tex
+++ b/latex/saes/SAE23_exemple1.tex
@@ -21,31 +21,30 @@ d'un site web.}
 Partant des spécifications fournies par le client, l'étudiant devra
 proposer, développer un prototype de l'application puis présenter le
 travail réalisé devant le jury de sélection du prestataire.\\
-L'étudiant devra mettre en place de son environnement de travail
-(ressource R108), choisir et utiliser les technologies Web adéquates
-pour produire son site Web (ressource R109 et R209), mettre en place la
-gestion des données du site (ressource R207) et programmer leur
-traitement (ressource R107 et R208).\\
+L'étudiant devra mettre en place son environnement de travail, choisir
+et utiliser les technologies Web adéquates pour produire son site Web,
+mettre en place la gestion des données du site et programmer leur
+traitement.\\
 La SAÉ pourra être réalisée par un groupe de 2 étudiants.\\
 Partant d'un cahier des charges fourni, et pour un binôme d'étudiants,
 la SAé pourra être mise en oeuvre avec différentes étapes :
 \begin{itemize}
 \item
-  Phase 1 : mMise en place de l'environnement de développement
+  Phase 1 : mise en place de l'environnement de développement :
   \begin{itemize}
   \item
     Utilisation d'une machine virtuelle ou accès à distance aux
-    ressources (par exemple : ferme ESX,
-    proxmox, guacamole, docker, \ldots), partage par clés \textabbrv{USB}
+    ressources (par ex : ferme ESX, Proxmox,
+    Guacamole, Docker, \ldots), partage par clés \textabbrv{USB}
   \item
-    Installation ou utilisation d'un serveur web non chiffré (type Nginx
+    Installation ou utilisation d'un serveur Web non chiffré (type Nginx
     ou Apache)
   \item
     Utilisation possible d'un framework python (Django, Flask) ou
     JavaScript (jQuery), java (play), etc\ldots{}
   \end{itemize}
 \item
-  Phase 2 : rRéalisation documentée incluant :
+  Phase 2 : réalisation documentée incluant :
   \begin{itemize}
   \item
     Algorithmique (script serveur, dépôt de codes)
@@ -56,21 +55,12 @@ la SAé pourra être mise en oeuvre avec différentes étapes :
     modification)
   \end{itemize}
 \item
-  Phase 3 : pPrésentation du prototype devant le jury de sélection avec
-  rédaction d'un rapport
+  Phase 3 : présentation du prototype devant le jury de sélection avec
+  rédaction d'un rapport.
 \end{itemize}
 Le travail demandé pourra inclure a minima un livrable en anglais
 (commentaires des codes, vidéo, présentation ou documentation).\\
-Il pourra également mobiliser l'étudiant sur des activités de :
-\begin{itemize}
-\item
-  Communication : présentation orale, rédaction d'un rapport, conduite
-  de réunion
-\item
-  Anglais : lecture de documentation technique, rédaction, présentation
-  orale
-\end{itemize}
-Transformations attendues chez l'étudiant :
+Les transformations attendues chez l'étudiant sont :
 \begin{itemize}
 \item
   Apprendre en autonomie
@@ -83,7 +73,7 @@ Transformations attendues chez l'étudiant :
 \end{itemize}
 }
 
-\ajoutESformes{TP, Projet, serious game}
+\ajoutESformes{TP, Projet, Serious game}
 
 
 
