--- a/latex/saes/SAE23_exemple2.tex
+++ b/latex/saes/SAE23_exemple2.tex
@@ -15,17 +15,15 @@ développement - documenter les fonctionnalités de son outil et former
 les utilisateurs à son utilisation.}
 
 \ajoutESdescription{
-Cette SAé propose à l'étudiant de s'initier au développement d'une telle
+Cette SAÉ propose à l'étudiant de s'initier au développement d'une telle
 application Web. Partant des besoins utilisateurs, l'étudiant devra :
 \begin{itemize}
 \item
-  mettre en place de son environnement de travail (ressource R108)
+  mettre en place de son environnement de travail
 \item
   choisir et utiliser les technologies Web adéquates pour produire son
-  site Web (ressource R109 et R209),
-  mettre en place la gestion des données du site (ressource R207) et
-  programmer leur traitement (ressource
-  R107 et R208)
+  site Web, mettre en place la
+  gestion des données du site et programmer leur traitement
 \item
   présenter le travail réalisé aux utilisateurs pour les former à son
   utilisation, certains utilisateurs
@@ -36,12 +34,12 @@ Partant d'un cahier des charges fourni, et pour un binôme d'étudiants,
 la SAé pourra être mise en oeuvre avec différentes étapes :
 \begin{itemize}
 \item
-  Phase 1 : mise en place de l'environnement de développement
+  Phase 1 : mise en place de l'environnement de développement :
   \begin{itemize}
   \item
     Utilisation d'une machine virtuelle ou accès à distance aux
     ressources (par exemple : ferme ESX,
-    proxmox, guacamole, docker, \ldots), partage par clés \textabbrv{USB}
+    Proxmox, Guacamole, Docker, \ldots), partage par clés \textabbrv{USB}
   \item
     Installation ou utilisation d'un serveur web non chiffré (type Nginx
     ou Apache)
@@ -63,11 +61,11 @@ la SAé pourra être mise en oeuvre avec différentes étapes :
 \item
   Phase 3 : organisation d'une session de formation en anglais à
   l'application Web auprès des collaborateurs
-  de la société, avec documentation de l'application en anglais
+  de la société, avec documentation de l'application en anglais.
 \end{itemize}
 }
 
-\ajoutESformes{}
+\ajoutESformes{TP, projet}
 
 
 
