--- a/latex/saes/SAE24.tex
+++ b/latex/saes/SAE24.tex
@@ -74,12 +74,22 @@
 
 % Livrable
 \ajoutSlivrables{
-Dossier ou rapport d'étude\\
-Prototype ou montage\\
-Présentation orale avec diaporama\\
-Et / ou \textabbrv{QCM}\\
-Et / ou grille de suivi
+\vspace{-5pt}
+\begin{itemize}
+\item
+  Dossier ou rapport d'étude
+\item
+  Prototype ou montage
+\item
+  Présentation orale avec diaporama
+\item
+  Et/ou \textabbrv{QCM}
+\item
+  Et/ou grille de suivi
+\end{itemize}
+L'étudiant s'approprie son portfolio. Des temps sont prévus pour qu'il y
+synthétise sa production technique et son analyse argumentée.
 }
 
 % Mots-clés
-\ajoutSmotscles{Réseaux  locaux, \textabbrv{LAN}, programmation, cybersécurité.}
+\ajoutSmotscles{Réseaux  locaux, \textabbrv{LAN}, Programmation, Cybersécurité.}
