--- a/latex/saes/SAE24_exemple1.tex
+++ b/latex/saes/SAE24_exemple1.tex
@@ -5,11 +5,11 @@
 \nouvelexemple{Découvrir mon réseau informatique domestique}
 
 \ajoutESproblematique{Le réseau informatique domestique est une \og  petite \fg{} instance
-d'un réseau d'entreprise (par exemple, box, points d'accès wifi, réseaux
+d'un réseau d'entreprise (par exemple, box, points d'accès WiFi, réseaux
 du CROUS, modem, \textabbrv{4G}, ordinateurs, téléphonie, objets connectés).\\
 Dans cette SAÉ, l'étudiant devra comprendre l'agencement des briques
 télécoms (accès au réseau), des équipements (routeur, switch, firewall,
-wifi), des terminaux (\textabbrv{PC}, smartphone, \ldots) et des protocoles (IP,
+WiFi), des terminaux (\textabbrv{PC}, smartphone, \ldots) et des protocoles (IP,
 \textabbrv{DHCP}, \textabbrv{DNS}, Mail, Web, \ldots) qui permettent le fonctionnement de son
 réseau domestique.\\
 Il devra également reconnaître les \textabbrv{OS} des différents appareils connectés
@@ -26,11 +26,11 @@ réseaux et des outils logiciel réseau de base et exprimera les résultats
 L'étudiant devra mobiliser toutes les ressources vues jusqu'à présent :
 \begin{itemize}
 \item
-  Cours réseaux, informatique, télécommunications
+  Cours réseaux, informatique, télécommunications;
 \item
-  Expression-communication: recherche documentaire, rédaction, exposé.
+  Expression-communication: recherche documentaire, rédaction, exposé;
 \item
-  Vocabulaire anglais en réseaux et télécoms
+  Vocabulaire anglais en réseaux et télécoms;
 \item
   Outils numériques de schéma réseau, outil de présentation type
   powerpoint.
