--- a/latex/saes/SAE24_exemple3.tex
+++ b/latex/saes/SAE24_exemple3.tex
@@ -32,26 +32,35 @@ confidentialité des biens impactés, afin d'insister sur l'importance de
 l'hygiène informatique en contexte professionnel.
 }
 
-\ajoutESformes{Sur des heures encadrées :
+\ajoutESformes{\vspace{-5pt}
 \begin{itemize}
 \item
-  TP de R201, R202, R203, R204, R207, R208, R209
-\end{itemize}
-Sur des heures non encadrées :
-\begin{itemize}
+  Sur des heures encadrées : TP de R201, R202, R203, R204, R207, R208,
+  R209
 \item
-  Recherche documentaire
-\item
-  Mise en place de maquette, configuration et test
-\item
-  Rédaction de livrables, préparation de présentations
+  Sur des heures non encadrées :
+  \begin{itemize}
+  \item
+    Recherche documentaire
+  \item
+    Mise en place de maquette, configuration et test
+  \item
+    Rédaction de livrables, préparation de présentations
+  \end{itemize}
 \end{itemize}}
 
 
 
-\ajoutESmodalite{Une maquette autonome, réelle ou virtuelle, d'un réseau de \textabbrv{PME},
-intégrant des vulnérabilités et des outils permettant de les exploiter.\\
-Une présentation de cette maquette, des vulnérabilités et des attaques
-sera faite dans le cadre d'un rapport et/ou d'une soutenance et/ou d'une
-démonstration. L'anglais pourra être demandé pour tout ou partie des
-livrables ou présentations.}
+\ajoutESmodalite{\vspace{-5pt}
+\begin{itemize}
+\item
+  Une maquette autonome, réelle ou virtuelle, d'un réseau de \textabbrv{PME},
+  intégrant des vulnérabilités et des
+  outils permettant de les exploiter;
+\item
+  Une présentation de cette maquette, des vulnérabilités et des attaques
+  sera faite dans le cadre d'un
+  rapport et/ou d'une soutenance et/ou d'une démonstration. L'anglais
+  pourra être demandé pour tout ou
+  partie des livrables ou présentations.
+\end{itemize}}
