--- a/latex/synthese/S2_acs_vs_saes_ressources.tex
+++ b/latex/synthese/S2_acs_vs_saes_ressources.tex
@@ -4,7 +4,7 @@
  & \multicolumn{14}{c|}{\textcolor{ressourceC}{\bfseries Ressources}}\\ 
 \cline{3-20} & & \rotatebox[origin=l]{90}{\tiny{Construire un réseau informatique pour une petite structure~}}
  & \rotatebox[origin=l]{90}{\tiny{Mesurer et caractériser un signal ou un système~}}
- & \rotatebox[origin=l]{90}{\tiny{Mettre en place une solution informatique pour l’entreprise~}}
+ & \rotatebox[origin=l]{90}{\tiny{Mettre en place une solution informatique pour l'entreprise~}}
  & \rotatebox[origin=l]{90}{\tiny{Projet intégratif~}}
 
  & \rotatebox[origin=l]{90}{\tiny{Technologie de l'Internet~}}
