--- a/latex/synthese/S2_coeffs_saes_ressources.tex
+++ b/latex/synthese/S2_coeffs_saes_ressources.tex
@@ -29,7 +29,7 @@
 \begin{tabular}{p{5.7cm}} \tiny{Mesurer et caractériser un signal ou un système} \end{tabular} & 
   & 10h & 12h &  & 19 & \\ 
 \hline \textcolor{saeC}{SAÉ23} & 
-\begin{tabular}{p{5.7cm}} \tiny{Mettre en place une solution informatique pour l’entreprise} \end{tabular} & 
+\begin{tabular}{p{5.7cm}} \tiny{Mettre en place une solution informatique pour l'entreprise} \end{tabular} & 
 3h & 14h & 12h &  &  & 18\\ 
 \hline \textcolor{saeC}{SAÉ24} & 
 \begin{tabular}{p{5.7cm}} \tiny{Projet intégratif} \end{tabular} & 
