--- a/latex/ressources/R102.tex
+++ b/latex/ressources/R102.tex
@@ -64,14 +64,15 @@ les notions de services rendus et de performance du réseau.}
   taux de pertes.
 \end{itemize}
 Outils préconisés : logiciels du type Wireshark, GNS3, Packet Tracer,
-scapy, Marionnet.Faire le lien avec les aspects sécurité informatique et
-réseaux mentionnés en R101.\\
+scapy, Marionnet.\\
 Des éléments relatifs à la sécurité et aux risques informatiques et
 réseaux seront progressivement introduits au travers des différents
 contenus étudiés afin que ces éléments deviennent une préoccupation
 routinière. Les éléments de cybersécurité pourront être abordés via des
 exemples tels que l'arp-spoofing, la prise d'empreintes via \textabbrv{ICMP}, des
-captures, la génération et analyse de trames.
+captures, la génération et analyse de trames. Des liens avec les aspects
+sécurité informatique et réseaux mentionnés en R101 seront également
+faits.
 }
 
 % Mots-clés
