--- a/latex/ressources/R210.tex
+++ b/latex/ressources/R210.tex
@@ -28,7 +28,7 @@
 % Les SAE
 \ajoutRsae{SAÉ21}{Construire un réseau informatique pour une petite structure}
 \ajoutRsae{SAÉ22}{Mesurer et caractériser un signal ou un système}
-\ajoutRsae{SAÉ23}{Mettre en place une solution informatique pour l’entreprise}
+\ajoutRsae{SAÉ23}{Mettre en place une solution informatique pour l'entreprise}
 \ajoutRsae{SAÉ24}{Projet intégratif}
 
 % Les pre-requis
@@ -62,7 +62,7 @@ de compréhension dans un contexte professionnel technique.}
 \item
   Développer le vocabulaire technique des domaines cibles;
 \item
-  extensions possibles : télécollaboration, télétandem, parcours
+  Extensions possibles : télécollaboration, télétandem, parcours
   international, dispositif \textabbrv{EMILE}.
 \end{itemize}
 }
