--- a/latex/saes/SAE11_exemple2.tex
+++ b/latex/saes/SAE11_exemple2.tex
@@ -9,66 +9,48 @@ menaces numériques communes (cybersécurité) et de savoir mettre en place
 les actions pour y remédier.}
 
 \ajoutESdescription{
-On pourra faire un focus particulier sur les points suivants.
+On pourra faire un focus particulier sur les points suivants:
 \begin{itemize}
 \item
-  Protéger ses accès avec des mots de passe solides; en TP on peut
-  mettre en place l'usage d'un gestionnaire
-  de mot de passe tel que Keepass (multi-plateformes Windows, Linux,
-  Mac, Android, iPhone/iPad);
+  L'arnaque au faux support technique;
 \item
-  Sécurité numérique : sauvegarder ses données régulièrement;
+  Les attaques en déni de service (\textabbrv{DDoS});
 \item
-  Appliquer les mises à jour de sécurité sur tous ses appareils (\textabbrv{PC},
-  tablettes, téléphones\ldots), et ce,
-  dès qu'elles sont proposées;
+  Le chantage à l'ordinateur ou à la webcam prétendus piratés;
 \item
-  Utiliser un antivirus;
+  L'escroquerie aux faux ordres de virement (\textabbrv{FOVI});
 \item
-  Télécharger ses applications uniquement sur les sites officiels;
+  La défiguration de site internet;
 \item
-  Sécurité numérique : se méfier des messages inattendus;
+  Les fausses offres d'emploi créées par des fraudeurs;
 \item
-  Vérifier les sites sur lesquels sont effectués ses achats;
+  La fraude à la carte bancaire;
 \item
-  Maîtriser ses réseaux sociaux;
+  L'hameçonnage (phishing en anglais);
 \item
-  Séparer ses usages personnels et professionnels;
+  Le piratage de compte;
 \item
-  Sécurité numérique : éviter les réseaux WiFi publics ou inconnus; il
-  est possible de faire un TP (démo)
-  sur l'usage d'un faux point d'accès WiFi et de collecter des
-  identifiants de réseaux sociaux, \ldots.
+  Le piratage de compte de l'espace d'un recruteur;
 \item
-  Analyser les trames non chiffrées des protocoles (\textabbrv{TELNET}, \textabbrv{FTP}, \textabbrv{SMTP},
-  \textabbrv{POP}, \textabbrv{IMAP}, \textabbrv{RTP}, \ldots) avec Wireshark,
-  en extraire des champs significatifs avec Analyse/Follow/\textabbrv{TCP} Stream
-  (ou \textabbrv{HTTP} Stream); on peut utiliser
-  un site Web (création personnelle ou sur Internet) contenant un
-  formulaire d'enregistrement (ex:
-  \url{http://www.supportduweb.com/signup.html});
+  Les propositions d'emploi non sollicitées;
 \item
-  Utiliser des outils de codage de l'information (ex:
-  \url{https://www.dcode.fr/fr}).
+  Les rançongiciels (ransomwares en anglais);
+\item
+  Le spam électronique;
+\item
+  Le spam téléphonique.
 \end{itemize}
 On pourra également utiliser les supports:
 \begin{itemize}
 \item
-  Cybermalveillance:\url{https://www.cybermalveillance.gouv.fr/bonnes-pratiques}
+  Cybermalveillance
+  :\url{https://www.cybermalveillance.gouv.fr/bonnes-pratiques}
 \item
-  \textabbrv{MOOC} \textabbrv{ANSSI}:\url{https://secnumacademie.gouv.fr/}
+  \textabbrv{MOOC} \textabbrv{ANSSI} :\url{https://secnumacademie.gouv.fr/}
 \end{itemize}
 }
 
-\ajoutESformes{\vspace{-5pt}
-\begin{itemize}
-\item
-  TP, projet.
-\item
-  Appropriation du portfolio par l'étudiant, avec temps prévus pour
-  qu'il y synthétise sa production
-  technique et son analyse argumentée.
-\end{itemize}}
+\ajoutESformes{TP, projet.}
 
 
 
