--- a/latex/saes/SAE11_exemple3.tex
+++ b/latex/saes/SAE11_exemple3.tex
@@ -22,7 +22,7 @@ L'étudiant, dès la fin du S1, prendra ainsi conscience de la nécessité
 d'une bonne hygiène informatique, en découvrant :
 \begin{itemize}
 \item
-  l'intérêt des bons mots de passe (nb de caractères, complexité de
+  l'intérêt des bons mots de passe (nombre de caractères, complexité de
   l'alphabet);
 \item
   les sauvegardes de données (risque des supports, de la non
@@ -47,9 +47,10 @@ Cette liste n'est évidemment pas limitative.\\
 On pourra également utiliser les supports:
 \begin{itemize}
 \item
-  Cybermalveillance:\url{https://www.cybermalveillance.gouv.fr/bonnes-pratiques}
+  Cybermalveillance :
+  \url{https://www.cybermalveillance.gouv.fr/bonnes-pratiques}
 \item
-  \textabbrv{MOOC} \textabbrv{ANSSI}:\url{https://secnumacademie.gouv.fr/}
+  \textabbrv{MOOC} \textabbrv{ANSSI} : \url{https://secnumacademie.gouv.fr/}
 \item
   Malette CyberEdu :
   \url{https://www.ssi.gouv.fr/entreprise/formations/secnumedu/contenu-pedagogique-cyberedu/}
@@ -58,22 +59,14 @@ On pourra également utiliser les supports:
 \end{itemize}
 }
 
-\ajoutESformes{\vspace{-5pt}
-\begin{itemize}
-\item
-  TP, projet.
-\item
-  Appropriation du portfolio par l'étudiant, avec temps prévus pour
-  qu'il y synthétise sa production
-  technique et son analyse argumentée.
-\end{itemize}}
+\ajoutESformes{TP, projet.}
 
 
 
-\ajoutESmodalite{Chaque étudiant ou groupe d'étudiant doit produire un rapport sous forme
-de catalogue de vulnérabilités que l'on pourrait destiner à une campagne
-de sensibilisation pour ``grand public''. Le format de ``1
-vulnérabilité, 1 (ou 2) page.s'' doit être le format à viser pour
+\ajoutESmodalite{Chaque étudiant ou groupe d'étudiants doit produire un rapport sous
+forme de catalogue de vulnérabilités que l'on pourrait destiner à une
+campagne de sensibilisation pour \og grand public\fg{}. Le format de
+\og 1 vulnérabilité, 1 ou 2 pages\fg{} doit être le format à viser pour
 imposer une description synthétique et éviter les copier/coller
 compulsifs avec détails techniques superflus. Les exemples d'attaques
 présentés doivent être réalistes et compréhensibles par des non
