--- a/latex/saes/SAE12_exemple2.tex
+++ b/latex/saes/SAE12_exemple2.tex
@@ -42,7 +42,7 @@ Il s'agit de :
 
 \ajoutESmodalite{L'étudiant doit être capable de retranscrire l'architecture réseau grâce
 à un outil de schéma réseau et de le détailler avec l'ensemble des
-paramètres du cahiers des charges et des configurations.\\
+paramètres du cahier des charges et des configurations.\\
 Pour l'évaluation, les étudiants doivent être capables de faire une
 démonstration technique progressive par tests unitaires, ou un rapport
 de synthèse ou une présentation avec diaporama.\\
