--- a/latex/saes/SAE21.tex
+++ b/latex/saes/SAE21.tex
@@ -55,7 +55,7 @@ fournir à la structure un réseau fonctionnel et structuré.}
 \item
   Maquette du projet
 \item
-  Dossier ou rapport décrivant l'architecture physique, les vlan,
+  Dossier ou rapport décrivant l'architecture physique, les \textabbrv{VLAN},
   l'adressage \textabbrv{IP}, les principaux points
   de vérification du projet, des captures de trafic et différents
   scénarios permettant de valider les
@@ -64,6 +64,8 @@ fournir à la structure un réseau fonctionnel et structuré.}
 \item
   Vidéo de démonstration du fonctionnement
 \end{itemize}
+L'étudiant s'approprie son portfolio. Des temps sont prévus pour qu'il y
+synthétise sa production technique et son analyse argumentée.
 }
 
 % Mots-clés
