--- a/latex/saes/SAE22_exemple3.tex
+++ b/latex/saes/SAE22_exemple3.tex
@@ -4,16 +4,15 @@
 
 \nouvelexemple{Études comparatives de solutions de numérisation de l'information}
 
-\ajoutESproblematique{}
-
-\ajoutESdescription{
-Dans un contexte professionnel, le choix d'une solution de numérisation
+\ajoutESproblematique{Dans un contexte professionnel, le choix d'une solution de numérisation
 de l'information a des conséquences directes sur la qualité du signal
 transmis, le débit ou la bande passante nécessaire, le coût des
 équipements (codec gratuit ou payant par exemple). Il est donc
 intéressant de pouvoir comparer plusieurs solutions de numérisation afin
 de déterminer la plus judicieuse, en se focalisant, dans ce contexte de
-1ère année de BUT, sur des signaux de type audio.\\
+1ère année de BUT, sur des signaux de type audio.}
+
+\ajoutESdescription{
 Les diverses solutions de numérisation pourront faire intervenir la
 fréquence d'échantillonnage, le nombre de bits de conversion, la loi de
 conversion.\\
@@ -23,22 +22,34 @@ devra effectuer, quels sont les appareils adéquats, quels devront être
 leurs réglages.\\
 Une fois les mesures effectuées, il devra être capable de les analyser
 et, par exemple, de produire une information de type cartographique.\\
-Les exemples de numérisation à comparer pourront être :
+Les exemples de numérisation à comparer pourront être de type :
 \begin{itemize}
 \item
-  de type audio en téléphonie;
+  audio en téléphonie;
 \item
-  de type audio avec une qualité \textabbrv{HiFi};
+  audio avec une qualité \textabbrv{HiFi};
 \item
-  de type codec G711.
+  codec G711.
 \end{itemize}
 }
 
-\ajoutESformes{Travaux pratiques (notamment pour les mesures), projet (notamment pour
-la recherche sur les standards de numérisations retenus , pour le choix
-des mesures à faire et du paramétrage des appareils, et pour l'analyse
-des mesures effectuées)}
+\ajoutESformes{\vspace{-5pt}
+\begin{itemize}
+\item
+  Travaux pratiques, notamment pour les mesures;
+\item
+  Projet, notamment pour la recherche sur les standards de numérisations
+  retenus, pour le choix des
+  mesures à faire et du paramétrage des appareils, et pour l'analyse des
+  mesures effectuées.
+\end{itemize}}
 
 
 
-\ajoutESmodalite{}
+\ajoutESmodalite{\vspace{-5pt}
+\begin{itemize}
+\item
+  Rapport écrit;
+\item
+  et/ou présentation orale des performances mesurées et de leur analyse.
+\end{itemize}}
